adding CSS and handling ChannelItem

--- a/05-video/src/css/VideoItem.css
+++ b/05-video/src/css/VideoItem.css
@@ -4,12 +4,17 @@
   margin: 5px;
 }
 
+.video-thumbnail {
+  cursor: pointer;
+}
+
 .video-info {
   padding-left: 10px;
 }
 
 .video-info a {
   color: black;
+  cursor: pointer;
 }
 
 .video-title {
